# symsyq

./: .env  .env.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
src/: main.rs  utils.rs
src/commands/: clear.rs  disconnect.rs  mod.rs  pause.rs  play.rs  remove.rs  repeat.rs  resume.rs  seek.rs  skip.rs  song.rs  songqueue.rs  switch.rs
